--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bulma": "^0.6.0",
     "vue": "^2.4.4"
   },
   "devDependencies": {
