--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "buefy": "^0.1.5",
     "bulma": "^0.6.0",
+    "style-loader": "^0.19.0",
     "vue": "^2.4.4"
   },
   "devDependencies": {
