--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,22 +1,23 @@
 version: '3'
 services:
-  golang:
-    build:
-      context: .
-      args:
-        USER: $USER
-        UID: $UID
-    image: golang-app
-    volumes:
-      - ./go:/go
-    command: sh ./start.sh
-    env_file:
-      - .env
-    ports:
-      - 8080:8080
-    container_name: api
+#  golang:
+#    build:
+#      context: .
+#      args:
+#        USER: $USER
+#        UID: $UID
+#    image: golang-app
+#    volumes:
+#      - ./go:/go
+#    command: sh ./start.sh
+#    env_file:
+#      - .env
+#    ports:
+#      - 8080:8080
+#    container_name: api
 
   mongodb:
+      restart: always
       image: mongo:latest
       ports:
           - 27017:27017
