add: room endpoint

--- a/server/Makefile
+++ b/server/Makefile
@@ -55,3 +55,6 @@ win-install:
 	sudo make install
 	@echo bashrcに　eval "$(direnv hook bash)"  の記述を追加してください
 	@echo 参考URL:https://qiita.com/ngyuki/items/fda1bbf29384bef7a805
+
+curl:
+	curl -v -X POST --header 'Content-Type: application/json' --header 'Accept: application/vnd.goa.error' 'http://localhost:8080/api/rooms' -d '{"agenda": [{"id": 1,"title": "アイデア出し","goal": "アイデアを10個出す","time": 10,"start_at": "1995-01-11T06:25:13+09:00","end_at": "1995-01-11T06:25:13+09:00","child": [{"id": 2,"title": "テーマを考える","goal": "テーマ案を5個出す","time": 5,"start_at": "1995-01-11T06:25:13+09:00","end_at": "1995-01-11T06:25:13+09:00"},{"id": 3,"title": "ブレスト","goal": "アイデアを10個出す","time": 5,"start_at": "1995-01-11T06:25:13+09:00","end_at": "1995-01-11T06:25:13+09:00"}]},{"id": 4,"title": "アイデアを絞る","goal": "アイデアを1個に絞る","time": 10,"start_at": "1995-01-11T06:25:13+09:00","end_at": "1995-01-11T06:25:13+09:00"}]}'
