--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "buefy": "^0.1.5",
     "bulma": "^0.6.0",
     "moment": "^2.19.1",
