--- a/client/Makefile
+++ b/client/Makefile
@@ -1,2 +1,5 @@
 cp:
-  cp -r ./html/ ../server/go/src/app/public/
+	npm run build
+	cp -r ./html/ ../server/go/src/app/public/html
+	cp -r ./dist/ ../server/go/src/app/public/dist
+
